[package]
name = "terra-rust-oracle-feeder"

version = "0.1.0"
authors = ["PFC-Validator <PFC-Validator@protonmail.com>"]
edition = "2018"
readme = "README.md"
homepage = "https://github.com/PFC-Validator/terra-rust-oracle-feeder/"
repository = "https://github.com/PFC-Validator/terra-rust-oracle-feeder/"
keywords = ["terra", "blockchain"]
categories = ["oracle"]


[dependencies]
terra-rust-api =  {version="0.1.12"}
#terra-rust-api =  {version="0.1.8", path= "../terraRust/terra-rust-api"}
error-chain = "0.12.2"
tokio = { version = "1.4", features = ["full"] }
structopt = "0.3"
env_logger = "0.8.3"
log="0.4"
serde = { version = "1.0", features = ["derive"] }
dotenv="0.15.0"
keyring = "0.10.1"
bitcoin="0.26.0"
reqwest = { version ="0.11", features=["json"]}
serde_json = "1.0"
chrono="0.4"
rust_decimal="1.12.2"
rust_decimal_macros = "1.12.2"
rand="0.8.3"
hex="0.4.3"